--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "@types/node-fetch": "^2.6.12",
     "ts-node": "^10.9.2",
@@ -20,11 +20,13 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.800.0",
-    "@aws-sdk/client-transcribe": "^3.804.0",
+    "@aws-sdk/client-transcribe": "^3.810.0",
     "@aws-sdk/s3-request-presigner": "^3.800.0",
+    "@types/express": "^4.17.21",
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "node-fetch": "^3.3.2",
     "uuid": "^11.1.0"
   }
