--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,10 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.812.0",
     "@aws-sdk/client-s3": "^3.800.0",
     "@aws-sdk/client-transcribe": "^3.810.0",
+    "@aws-sdk/lib-dynamodb": "^3.812.0",
     "@aws-sdk/s3-request-presigner": "^3.800.0",
     "@types/express": "^4.17.21",
     "axios": "^1.9.0",
